--- a/source/Go2Testing/config/extension.toml
+++ b/source/Go2Testing/config/extension.toml
@@ -23,7 +23,7 @@ keywords = ["extension", "template", "isaaclab"]
 # NOTE: Add additional dependencies here
 
 [[python.module]]
-name = "ext_template"
+name = "Go2Testing"
 
 [isaaclab_settings]
 # TODO: Uncomment and list any apt dependencies here.
